@@ -1,5 +1,14 @@
 2005-11-03  Christian Persch  <chpe@cvs.gnome.org>
 
+	* data/art/Makefile.am:
+	R data/art/hand-open.png:
+	* lib/egg/egg-toolbar-editor.c: (drag_data_get_cb),
+	(set_drag_cursor):
+
+	Use a gtk stock cursor (GDK_HAND2) instead of our own, un-themed one.
+
+2005-11-03  Christian Persch  <chpe@cvs.gnome.org>
+
 	* lib/widgets/ephy-location-entry.c: (favicon_drag_begin_cb),
 	(ephy_location_entry_construct_contents):
 
